--- a/startup-react-pt2/src/play/players.css
+++ b/startup-react-pt2/src/play/players.css
@@ -1,9 +1,8 @@
 .players {
-  flex: 1;
-  width: 100%;
   padding: 0.5em;
+  position: relative;
+  
 }
-
 .player-name {
   color: rgb(118, 190, 210);
   margin: 0 0.25em;
@@ -12,10 +11,12 @@
 #player-messages {
   padding-top: 0.25em;
   opacity: 0.7;
+  width: fit-content;
 }
 
 .event {
   color: rgb(200, 200, 200);
+  width: fit-content;
 }
 
 .player-event {
